--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 ### リスト操作関数(3)
 - - -
 1. OrderBy
-	* リストを指定したキーで並び替える
+	* リストを指定したキーで並び替えたリストを返す
 1. Aggregate
 	* リストの各要素どおしに指定した関数を適用した結果を返す
 
@@ -165,6 +165,11 @@ static void Main()
 * news.txtの単語数を数えるプログラム記述せよ
 * 単語はスペース、タブ、改行で区切られた文字列のことを指す
 * 文字列を単語の配列に変換するには、Split(new char[] {' ', '\t'}, StringSplitOptions.RemoveEmptyEntries)を使うこと
+
+---
+### 練習問題2
+- - -
+* news.txtの最頻出単語のトップ10を出現数とともに表示せよ
 
 ---
 ### まとめ
