--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 - - -
 * 情報はエントロピー増大の法則という物理の法則に従う
 * 情報は処理すればするほど劣化し元の情報を失っていく
-* ラムダ計算の簡約はこの法則の証査と言える
+* ラムダ計算の簡約はこの法則の証左と言える
 
 ---
 ### 関数型言語とは
